--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="style.css">
-  <title>Elvin Mammadli Portfolio</title>
+  <title>Elvin Mammadli | Frontend Developer</title>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -23,7 +20,8 @@
       <a href="#" class="navbar-brand">
         <h2>E.M</h2>
       </a>
-      <button class="navbar-toggler animate__animated animate__fadeInDown animate__delay-0.5s" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+      <button class="navbar-toggler animate__animated animate__fadeInDown animate__delay-0.5s" type="button"
+        data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
         MENU
       </button>
@@ -72,7 +70,7 @@
           <div class="person-img">
             <div class="ellipse-top"></div>
             <div class="ellipse-bottom"></div>
-            <img src="img/img (1).jpg" alt="">
+            <img src="img/profile-pic1.jpg" alt="">
           </div>
         </div>
       </div>
@@ -181,7 +179,8 @@
       <div class="row justify-content-center mt-5">
         <div class="col-md-6 text-center ftco-animate">
           <p>
-            <a href="assets/Elvin-Mammadli_15.04.2022ENG.pdf" class="btn btn-brand py-4 px-5" download="CV_Elvin-Mammadli">
+            <a href="assets/Elvin-Mammadli_15.04.2022ENG.pdf" class="btn btn-brand py-4 px-5"
+              download="CV_Elvin-Mammadli">
               Download CV
             </a>
           </p>
@@ -193,147 +192,6 @@
   <div class="container divider"></div>
 
   <!-- Portfolio -->
-  <!-- <section class="ftco-section ftco-project" id="projects">
-    <div class="container">
-      <div class="row justify-content-center pb-5">
-        <div class="col-md-12 heading-section text-center ftco-animate">
-          <h1 class="big big-2">Projects</h1>
-          <h2 class="mb-4">My Projects</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="project img ftco-animate d-flex justify-content-center align-items-center"
-            style="background-image: url(img/Grainmediapro_1436.jpg);">
-            <div class="overlay"></div>
-            <div class="text text-center p-4">
-              <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-              <span>Web Design</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="project img ftco-animate d-flex justify-content-center align-items-center"
-            style="background-image: url(img/Grainmediapro_1436.jpg);">
-            <div class="overlay"></div>
-            <div class="text text-center p-4">
-              <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-              <span>Web Design</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-8">
-          <div class="project img ftco-animate d-flex justify-content-center align-items-center"
-            style="background-image: url(img/Grainmediapro_1436.jpg);">
-            <div class="overlay"></div>
-            <div class="text text-center p-4">
-              <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-              <span>Web Design</span>
-            </div>
-          </div>
-
-          <div class="project img ftco-animate d-flex justify-content-center align-items-center"
-            style="background-image: url(images/project-6.jpg);">
-            <div class="overlay"></div>
-            <div class="text text-center p-4">
-              <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-              <span>Web Design</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="project img ftco-animate d-flex justify-content-center align-items-center"
-                style="background-image: url(images/project-2.jpg);">
-                <div class="overlay"></div>
-                <div class="text text-center p-4">
-                  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                  <span>Web Design</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-12">
-              <div class="project img ftco-animate d-flex justify-content-center align-items-center"
-                style="background-image: url(images/project-3.jpg);">
-                <div class="overlay"></div>
-                <div class="text text-center p-4">
-                  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                  <span>Web Design</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- <div class="container divider"></div> -->
-
-  <!-- Services -->
-  <!-- <section id="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 intro">
-          <h1>My <span class="text-brand">Services</span></h1>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab expedita amet voluptatibus similique
-            consectetur vitae sit maxime dolores inventore excepturi!</p>
-        </div>
-      </div>
-      <div class="row g-4">
-        <div class="col-lg-6">
-          <div class="service">
-            <div class="iconbox">
-              <img src="img/Grainmediapro_1443.jpg" alt="">
-            </div>
-            <div>
-              <h5>Branding</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, ipsum?</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="service">
-            <div class="iconbox">
-              <img src="img/Grainmediapro_1443.jpg" alt="">
-            </div>
-            <div>
-              <h5>Branding</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, ipsum?</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="service">
-            <div class="iconbox">
-              <img src="img/Grainmediapro_1443.jpg" alt="">
-            </div>
-            <div>
-              <h5>Branding</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, ipsum?</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="service">
-            <div class="iconbox">
-              <img src="img/Grainmediapro_1443.jpg" alt="">
-            </div>
-            <div>
-              <h5>Branding</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, ipsum?</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- <div class="container divider"></div> -->
-
-  <!-- PORTFOLIO -->
 
   <section id="portfolio">
     <div class="container">
@@ -347,7 +205,7 @@
       <div class="row g-4">
         <div class="col-12 col-md-6 col-lg-3">
           <div class="portfolio-item">
-            <img class="rounded" src="img/portfolio.avif" alt="">
+            <img class="rounded" src="img/Covid.JPG" alt="">
             <a href="#" class="iconbox" data-bs-toggle="modal" data-bs-target="#project1">
               <img src="img/preview.svg" alt="">
             </a>
@@ -355,7 +213,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3">
           <div class="portfolio-item">
-            <img class="rounded" src="img/portfolio.avif" alt="">
+            <img class="rounded" src="img/xezer.JPG" alt="">
             <a href="#" class="iconbox" data-bs-toggle="modal" data-bs-target="#project2">
               <img src="img/preview.svg" alt="">
             </a>
@@ -363,7 +221,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3">
           <div class="portfolio-item">
-            <img class="rounded" src="img/portfolio.avif" alt="">
+            <img class="rounded" src="img/Cloin.JPG" alt="">
             <a href="#" class="iconbox" data-bs-toggle="modal" data-bs-target="#project3">
               <img src="img/preview.svg" alt="">
             </a>
@@ -371,8 +229,24 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3">
           <div class="portfolio-item">
-            <img class="rounded" src="img/portfolio.avif" alt="">
+            <img class="rounded" src="img/Tourism.JPG" alt="">
             <a href="#" class="iconbox" data-bs-toggle="modal" data-bs-target="#project4">
+              <img src="img/preview.svg" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="portfolio-item">
+            <img class="rounded" src="img/businessLP.JPG" alt="">
+            <a href="#" class="iconbox" data-bs-toggle="modal" data-bs-target="#project5">
+              <img src="img/preview.svg" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="portfolio-item">
+            <img class="rounded" src="img/fbclone.JPG" alt="">
+            <a href="#" class="iconbox" data-bs-toggle="modal" data-bs-target="#project6">
               <img src="img/preview.svg" alt="">
             </a>
           </div>
@@ -381,19 +255,22 @@
     </div>
   </section>
 
-  <!-- Modal -->
+  <!-- Modals -->
+
   <div class="modal fade" id="project1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 class="modal-title" id="exampleModalLabel">Project 1</h2>
+          <h2 class="modal-title" id="exampleModalLabel">Covid Statistics</h2>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="" alt="">
+          <img src="img/Covid.JPG" alt="">
         </div>
         <div class="modal-footer">
-          <p>Lorem ipsum dolor sit amet.</p>
+          <a class="btn btn-brand" href="https://covid-world-app.netlify.app/" target="_blank">
+            Click to view this project
+          </a>
         </div>
       </div>
     </div>
@@ -403,14 +280,16 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 class="modal-title" id="exampleModalLabel">Project 2</h2>
+          <h2 class="modal-title" id="exampleModalLabel">Enterprise Resourse Management System</h2>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="" alt="">
+          <img src="img/xezer.JPG" alt="">
         </div>
         <div class="modal-footer">
-          <p>Lorem ipsum dolor sit amet.</p>
+          <a class="btn btn-brand" href="https://xezer.netlify.app/" target="_blank">
+            Click to view this project
+          </a>
         </div>
       </div>
     </div>
@@ -420,14 +299,16 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 class="modal-title" id="exampleModalLabel">Project 3</h2>
+          <h2 class="modal-title" id="exampleModalLabel">Landing Page</h2>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="" alt="">
+          <img src="img/Cloin.JPG" alt="">
         </div>
         <div class="modal-footer">
-          <p>Lorem ipsum dolor sit amet.</p>
+          <a class="btn btn-brand" href="https://elvin-mammadli.github.io/ATL_Responsive-page/" target="_blank">
+            Click to view this project
+          </a>
         </div>
       </div>
     </div>
@@ -437,14 +318,54 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 class="modal-title" id="exampleModalLabel">Project 4</h2>
+          <h2 class="modal-title" id="exampleModalLabel">Tourism Page</h2>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="" alt="">
+          <img src="img/Tourism.JPG" alt="">
         </div>
         <div class="modal-footer">
-          <p>Lorem ipsum dolor sit amet.</p>
+          <a class="btn btn-brand" href="https://elvin-mammadli.github.io/tourism/" target="_blank">
+            Click to view this project
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="project5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title" id="exampleModalLabel">Business Landing Page</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img src="img/businessLP.JPG" alt="">
+        </div>
+        <div class="modal-footer">
+          <a class="btn btn-brand" href="https://business-page-app.netlify.app/" target="_blank">
+            Click to view this project
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="project6" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title" id="exampleModalLabel">Facebook Login Clone</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img src="img/fbclone.JPG" alt="">
+        </div>
+        <div class="modal-footer">
+          <a class="btn btn-brand" href="https://fb-copy.vercel.app/" target="_blank">
+            Click to view this project
+          </a>
         </div>
       </div>
     </div>
@@ -457,28 +378,26 @@
       <div class="row">
         <div class="col-12 intro">
           <h1> My <span class="text-brand">Testimonials</span></h1>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab expedita amet voluptatibus similique
-            consectetur vitae sit maxime dolores inventore excepturi!</p>
         </div>
       </div>
       <div class="row g-4">
         <div class="col-lg-6">
           <div class="review">
             <div class="d-flex align-items-center">
-              <img src="img/Grainmediapro_1437.jpg" alt="">
+              <img class="rounded-circle" src="img/Nailm.JPG" alt="">
               <div class="ms-3">
                 <h5>Nail Mammadov</h5>
                 <small class="text-brand">Senior Javascript Developer</small>
               </div>
             </div>
             <p class="mt-3">I've seen Elvin's works, and to me, he is one the hardworking developer who won't sleep
-              until the work done</p>
+              until the work is done</p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="review">
             <div class="d-flex align-items-center">
-              <img src="img/Grainmediapro_1437.jpg" alt="">
+              <img class="rounded-circle" src="img/elmanm.JPG" alt="">
               <div class="ms-3">
                 <h5>Elman Astanov</h5>
                 <small class="text-brand">Senior Frontend Developer</small>
@@ -491,9 +410,9 @@
         <div class="col-lg-6">
           <div class="review">
             <div class="d-flex align-items-center">
-              <img src="img/Grainmediapro_1437.jpg" alt="">
+              <img class="rounded-circle" src="img/Orxan.jpeg" alt="">
               <div class="ms-3">
-                <h5>Orxan Tagizadeh</h5>
+                <h5>Orxan Tagizade</h5>
                 <small class="text-brand">Senior Frontend Developer</small>
               </div>
             </div>
@@ -513,18 +432,18 @@
       <div class="row">
         <div class="col-12 intro">
           <h1>Get in <span>touch</span></h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti modi voluptatum nisi quae iure ea?</p>
+          <p>Please feel free to contact me</p>
         </div>
       </div>
-      <form action="#" class="row g-3">
+      <form action="mailto:mamedli.elvin@gmail.com" method="post" enctype="text/plain" class="row g-3">
         <div class="form-group col-12">
-          <input type="text" class="form-control" placeholder="Enter your name">
+          <input type="text" class="form-control" name="name" placeholder="Enter your name" required>
         </div>
         <div class="form-group col-12">
-          <input type="text" class="form-control" placeholder="Enter your email">
+          <input type="email" class="form-control" name="mail" placeholder="Enter your email" required>
         </div>
         <div class="form-group col-12">
-          <textarea name="" id="" cols="30" rows="5" class="form-control" placeholder="Enter message"></textarea>
+          <textarea id="" cols="30" rows="5" name="comment" class="form-control" placeholder="Enter message" required></textarea>
         </div>
         <div>
           <button class="btn btn-brand">Send message</button>
@@ -538,12 +457,12 @@
       <div class="row justify-content-between">
         <div class="col-md-6">
           <p class="mb-0">
-            &copy; 2022 All rights reserved.
+            &copy; <span id="year"></span> All rights reserved.
           </p>
         </div>
         <div class="col-auto">
-          <a href="#" class="me-3">LinkedIn</a>
-          <a href="#">Github</a>
+          <a href="https://www.linkedin.com/in/elvinmammadli/" target="_blank" class="me-3">LinkedIn</a>
+          <a href="https://github.com/Elvin-Mammadli" target="_blank">Github</a>
         </div>
       </div>
     </div>
@@ -553,6 +472,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+    <script>
+      document.getElementById('year').textContent = new Date().getFullYear()
+    </script>
 </body>
 
 </html>
