--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
+
   <!-- Navbar start-->
+
   <nav class="navbar fixed-top py-3 navbar-expand-lg navbar-dark">
     <div class="container">
       <a href="#" class="navbar-brand">
@@ -49,9 +51,9 @@
       </div>
     </div>
   </nav>
-  <!-- Navbar end -->
 
   <!-- Home -->
+
   <section id="home">
     <div class="container">
       <div class="row gy-5 align-items-center">
@@ -80,6 +82,7 @@
   <div class="container divider"></div>
 
   <!-- About -->
+
   <section id="about">
     <div class="container">
       <div class="row">
@@ -427,6 +430,7 @@
   </section>
 
   <!-- Contacts -->
+
   <section id="contacts">
     <div class="container">
       <div class="row">
@@ -443,7 +447,8 @@
           <input type="email" class="form-control" name="mail" placeholder="Enter your email" required>
         </div>
         <div class="form-group col-12">
-          <textarea id="" cols="30" rows="5" name="comment" class="form-control" placeholder="Enter message" required></textarea>
+          <textarea id="" cols="30" rows="5" name="comment" class="form-control" placeholder="Enter message"
+            required></textarea>
         </div>
         <div>
           <button class="btn btn-brand">Send message</button>
@@ -451,6 +456,8 @@
       </form>
     </div>
   </section>
+
+  <!-- Footer -->
 
   <footer class="py-4">
     <div class="container">
@@ -472,9 +479,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-    <script>
-      document.getElementById('year').textContent = new Date().getFullYear()
-    </script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear()
+  </script>
 </body>
 
 </html>
